# simple-amqp-cpp

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  build.sh  example.cpp
include/: Connection.hpp  TcpHandler.hpp  ThreadUtils.hpp
src/: Connection.cpp  TcpHandler.cpp  ThreadUtils.cpp
